# bdd-plus-vst

./: .gitignore  Agent.md  Cargo.toml  README.md  bundler.toml
.github/workflows/: build.yml
src/: lib.rs  params.rs
src/dsp/: constants.rs  filters.rs  mod.rs  waveshaper.rs
src/gui/: editor.rs  mod.rs  theme.rs
